--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "1.0.0",
   "main": "amazonLogin.js",
   "scripts": {
-    "start": "node amazonLogin.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node amazonLogin.js"
   },
   "dependencies": {
-  "express": "^5.1.0",
-  "puppeteer-core": "^24.0.0",
-  "@sparticuz/chromium": "^126.0.0",
-  "fs": "^0.0.1-security"
-}
-
+    "express": "^5.1.0",
+    "puppeteer-core": "^24.0.0",
+    "@sparticuz/chromium": "^126.0.0"
+  }
 }
